<resources>
    <string name="app_name">Synapse</string>
    <string name="mnist_title">MNIST</string>
    <string name="data_unready">Download</string>
    <string name="data_ready">Ready</string>
    <string name="data_waiting">Waiting</string>
    <string name="try_again">Try again</string>
    <string name="action_add_new_layer">Click here to add a new layer</string>
    <string name="hint_new_hidden_size">New Hidden Layer Size</string>
    <string name="hint_learning_rate">Learning Rate</string>
    <string name="hint_epochs">Epochs</string>
    <string name="template_data_size" formatted="false">%s/%s</string>
    <string name="title_seek_bar">Data:</string>
    <string name="text_neural_config_title">New Model</string>
    <string name="text_neural_config_bt_positive">Run</string>
    <string name="text_neural_config_bt_negative">Cancel</string>
    <string name="transition_neural_config" translatable="false">transition_neural_config</string>
    <string name="text_data_set_training">TRAINING (60000 rows)</string>
    <string name="text_data_set_testing">TESTING (10000 rows)</string>
    <string name="text_download_error">Something wrong, please try again</string>
    <string name="text_download_success">Download successfully, decompressing</string>
    <string name="text_decompress_error">Something wrong, please try again</string>
    <string name="text_decompress_success">All data is ready, enjoy yourself</string>
    <string name="text_notification_decompress">Decompressing</string>
    <string name="text_dialog_need_wifi_msg">Please connect wifi first</string>
    <string name="text_dialog_need_wifi_title">Note</string>
    <string name="text_default_learning_rate">3</string>
    <string name="text_default_epochs">10</string>
    <string name="text_default_hidden_size">30</string>
    <string name="text_error_empty_hidden">Has empty hidden layer</string>
    <string name="text_error_zero_hidden_size">Zero hidden size is illegal</string>
    <string name="text_error_zero_learning_rate">Zero learning rate is illegal</string>
    <string name="text_error_zero_epochs">Zero epochs is illegal</string>
    <string name="text_wait_for_download">Service is downloading, please wait</string>
    <string name="text_wait_for_test">Service is testing, Please wait</string>
    <string name="text_wait_for_train">Service is training, please wait</string>
    <string name="text_train_interrupt">Interrupt</string>
    <string name="template_train_complete_title">Model %s has trained completely</string>
    <string name="template_train_complete_content" formatted="false">Time used: %s | Evaluate Accuracy: %s</string>
    <string name="template_train_start_title">Model: %s</string>
    <string name="template_train_update_content" formatted="false">Epoch: %s | Accuracy: %s</string>
    <string name="text_star_tip">STAR PROJECT</string>
    <string name="text_rate_tip">RATE APPLICATION</string>
    <string name="text_tip_layers">Layers</string>
    <string name="text_tip_learning_rate">Learning rate</string>
    <string name="text_tip_epochs">Epochs</string>
    <string name="text_tip_data_size">Data Size</string>
    <string name="text_time_used">Time used</string>
    <string name="text_tip_evaluate">Evaluate Accuracy</string>
    <string name="text_chart_left_axis">Training Accuracy</string>
    <string name="text_value_unable">--</string>
    <string name="text_dialog_no_data_msg">Will return to previous page</string>
    <string name="text_dialog_no_data_title">Data no found</string>
    <string name="text_dialog_no_data_negative">Return</string>
    <string name="text_dialog_interrupt_title">Interrupt Training?</string>
    <string name="text_dialog_interrupt_msg">Would not save the trained data!</string>
    <string name="dialog_positive">confirm</string>
    <string name="dialog_negative">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="text_dialog_delete_model_msg">Would you want to delete %s model?</string>
    <string name="text_dialog_delete_model_title">Delete Model</string>
    <string name="text_dialog_lack_download_manager_title">Can\'t find DownloadManager</string>
    <string name="text_dialog_lack_download_manager_msg">Sorry, we need DownloadManger to download the data set</string>
    <string name="text_error_fail_to_save_model">Fail to save model</string>
    <string name="text_error_lack_training_data">Lack of training data</string>
    <string name="text_dialog_train_error_title">Something wrong</string>
    <string name="text_dialog_train_error_msg">Sorry, may be you should try again</string>
    <string name="text_dialog_finish_action">Finish</string>
    <string name="text_error_repeat_name">Already contains %s model</string>
    <string name="text_model_detail_interrupt_waiting">Try to interrupt, please way…</string>
    <string name="text_dialog_external_not_found_title">External Storage Not Found</string>
    <string name="text_dialog_external_not_found_msg">Sorry, we can\'t find external storage in your device</string>
    <string name="text_dialog_need_external_title">Need External Storage</string>
    <string name="text_dialog_need_external_msg">We must make sure there is sufficient storage to save data set, please allow the external storage permission</string>
    <string name="text_welcome_text">Now we need to download MNIST database of handwritten digits, total size is 11 M, so please make sure you have enough storage and switch to WIFI mode. Have a great time!</string>
    <string name="text_dialog_download_direct">Download</string>
    <string name="text_dialog_download_setting_network">Setting</string>
    <string name="text_dialog_network_unavailable">Unavailable Network</string>
    <string name="text_predict_init">--</string>
    <string name="text_menu_renew">Renew</string>
    <string name="text_dialog_model_list_title">Chose a model</string>
    <string name="text_menu_jump_to_detail">View Detail</string>
    <string name="play">play</string>
    <string name="text_about">About</string>
    <string name="text_share_chooser_title">Share app to:</string>
    <string name="text_share_subject">Share Synapse to you</string>
    <string name="text_share_text">Synapse, training MBGD model recognizes mnist handwritten digits directly on Android device. Download in Google Play:</string>
    <string name="text_item_play_title">Play Time</string>
    <string name="text_item_play_msg">Here now you can play with trained models, enjoy yourself.</string>
    <string name="text_play_tip_msg">The SGD model is different from the CNN model and its correctness is affected by the image size and position. \n\nSo please make sure the handwritten number is in the middle of the panel.</string>
    <string name="text_great">Great</string>
    <string name="text_play_tip_title">Enjoy Yourself</string>
    <string name="text_dialog_about_msg"><b>Synapse</b> is a beauty, funny application which allows you train the <b>SDG</b>  model to recognize <b>MNIST</b> handwritten digits on local device directly. It does not depend on any deep learning library, just a <b>pure</b> Java implementation, for learning purposes only.</string>
    <string name="text_dialog_about_positive">Have a great time</string>
    <string name="text_author">by <b>Huazhou</b></string>
</resources>