<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/play"
        android:title="@string/play"
        android:icon="@drawable/ic_play_24dp"
        app:showAsAction="ifRoom"
        android:visible="false"
        tools:visible="true"
        />

    <item
        android:id="@+id/interrupt"
        android:title="@string/text_train_interrupt"
        app:showAsAction="never"
        android:visible="false"
        tools:visible="true"
        />

    <item
        android:id="@+id/delete"
        android:title="@string/action_delete"
        app:showAsAction="never"
        android:visible="false"
        tools:visible="true"
        />
</menu>