<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.whz.androidneuralnetwork.NeuralConfigDialog">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        tools:layout_gravity="center">

        <LinearLayout
            android:id="@+id/layout_hidden_layers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >
            <include layout="@layout/hidden_layer_input"/>
        </LinearLayout>

        <TextView
            android:id="@+id/action_add_new_layer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:textColor="@color/secondary_text"
            android:textStyle="italic"
            android:text="@string/action_add_new_layer"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_marginTop="8dp"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_learning_rate">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_learning_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/secondary_text"
                    android:inputType="numberDecimal"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_epochs">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_epochs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/secondary_text"
                    android:inputType="number"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_seek_bar"
                android:textSize="16sp"
                android:textColor="@color/color_accent"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/selected_data_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/secondary_text"
                    tools:text="@string/text_selected_data_size"
                    />

                <android.support.v7.widget.AppCompatSeekBar
                    android:id="@+id/seek_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progress="50"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
